[package]
name = "tweetonium"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
base64ct = "=1.6.0"
borsh = "=1.5.7"
mpl-core = "=0.11.1"
sha2 = "=0.10.9"
solana-program = "=3.0.0"
solana-sdk-ids = "=3.0.0"
solana-system-interface = { version = "=2.0.0", features = ["bincode"] }
spl-token-interface = "=2.0.0"
