cargo-features = ["edition2024"]

[package]
name = "tweetonium"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "=0.10.3"
borsh-derive = "=0.10.3"
bytemuck = { version = "=1.24.0", features = ["derive"] }
sha2 = "=0.10.9"

solana-program = "=2.0.4"
solana-sdk-ids = "=2.2.1"
solana-address = "=1.0.0"
solana-program-error = "=2.2.2"
solana-system-interface = { version = "=2.0.0", features = ["bincode"] }

spl-token-interface = "=2.0.0"
spl-token = { version = "=6.0.0", features = ["no-entrypoint"] }

mpl-core = "=0.10.1"
shank = "=0.4.5"
