[package]
name = "tweetonium"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "=0.10.3"
borsh-derive = "=0.10.3"
mpl-core = "=0.10.1"
shank = "=0.4.5"
solana-program = "=2.0.24"

[dev-dependencies]
solana-sdk = "=2.0.24"
solana-program-test = "=2.0.24"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unexpected_cfgs = "allow"
